# pipeline_orchestrater

./: .cursorrules  ARCHITECTURE.md  README.md  TODO.md  development.md  example_pipeline.yaml
extensions/pipeline_orchestrator_extension_shell/: __init__.py  extension.py  models.py  pyproject.toml
src/: Pulumi.core.yaml  Pulumi.yaml  pyproject.toml
src/pipeline_orchestrator/: __init__.py  __main__.py
src/pipeline_orchestrator/core/: bootstrap.py  context.py  errors.py  loader.py  logging.py  orchestrator.py  state.py
src/pipeline_orchestrator/handlers/: extension.py
src/pipeline_orchestrator/helpers/: containers.py  models.py  resources.py
src/pipeline_orchestrator/interfaces/: pulumi.py  testing.py
src/pipeline_orchestrator/models/: pipeline.py
src/test/: test_pipeline.yaml
